Another round of dependency upgrades